--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,5 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/bookStore"
+MongoDBURI= mongodb+srv://rishikeshpatil:1234554321@cluster0.whgc6ub.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+
+# MongoDBURI="mongodb://localhost:27017/bookStore"
